# rt_filter

./: .gitignore  README.md  pyproject.toml
output_alg/: README.md  RigidMatrix.h  __init__.py  adaptive_local_line.cpp  adaptive_local_line.hpp  butterworth.cpp  butterworth.hpp  euler_zyx_interface.hpp  filter_timing.hpp  interface.txt  one_euro_z.cpp  one_euro_z.hpp  one_euro_z.py  optional_double.hpp  ukf.cpp  ukf.hpp  ukf.py
output_alg/cpp_demo/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  main.cpp
rt_filter/: __init__.py  __main__.py  analysis.py  batch.py  cli.py  evaluation.py  filters.py  io.py  paraview_export.py  se3.py  stats.py  trajectory.py  vtk_export.py
rt_filter/gui/: __init__.py  app.py  chart_data.py
scripts/: analyze_case25_28_front_back_stability.py  build_cpp_demo.py  build_gui.py  plot_dynamic_segment_z.py  prepare_sn_ref_data.py  prepare_transic_ref_data.py  run_case16_hotel_analysis.py  run_case17_track500_analysis.py  run_case18_track_noise_0_1_analysis.py  run_case19_move_track00_full_analysis.py  run_case20_move_track00_analysis.py  run_case25_30_xyz_peak_preservation.py  run_case25_track00_static_holds.py  run_case29_case30_track00_edge_static.py  run_local_lab_case12.py  run_sn_analysis.py  run_synthetic_rectangle_analysis.py  summarize_case25_30_mean_positions.py  tune_adaptive_kalman_z.py  tune_adaptive_kalman_z_static.py
tests/: test_analysis_paraview.py  test_batch.py  test_filters.py  test_gui_app_filters.py  test_gui_chart_data.py  test_io.py  test_output_alg_one_euro_z.py  test_output_alg_ukf.py  test_vtk_export.py
