[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rt-filter"
version = "0.1.0"
description = "Robot trajectory filtering, batch execution, evaluation, and statistics tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
data = [
  "h5py>=3.11",
  "openpyxl>=3.1",
]
gui = [
  "PySide6>=6.7",
]
build = [
  "pyinstaller>=6.20",
]

[project.scripts]
rt-filter = "rt_filter.cli:main"
rt-filter-gui = "rt_filter.gui.app:main"

[tool.setuptools.packages.find]
include = ["rt_filter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
